--- a/deploy/css/game.css
+++ b/deploy/css/game.css
@@ -2,7 +2,8 @@
     background: #333;
     margin: 0;
     padding: 0;
+    text: center;
 }
-#game canvas {
+#game + canvas {
     margin: 0 auto;
 }
